<resources>
    <string name="app_name">Casa Por Temporada</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="esqueceu_a_senha">Esqueceu a senha ?</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
</resources>